--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -5,17 +5,17 @@
 
     \resumeItem{Company Name}{
         \begin{itemize}
-            \item Spearheaded continuous improvement initiatives within the QA organization, driving the adoption of automation to support continuous delivery development and faster release cycles.
-            \item Contributed to successful new product setup and launch readiness by ensuring comprehensive test coverage and identifying critical areas for improvement.
-            \item Championed the adoption of automation tools and best practices, fostering a culture of continuous delivery within the QA organization and reducing manual testing efforts.
+            \item Spearheaded the adoption of automation within the QA organization to support continuous delivery development and faster mobile application release cycles, aligning with HealthTech industry needs.
+            \item Contributed to successful new mobile product launches by ensuring comprehensive test coverage and identifying critical areas for improvement in mobile application performance and user experience.
+            \item Championed the adoption of automation tools and best practices, fostering a culture of continuous delivery for mobile applications and reducing manual testing efforts.
         \end{itemize}
     }
 
     \resumeItem{Another Company}{
         \begin{itemize}
-            \item Designed and implemented scalable and testable solutions with a strong emphasis on automated testing, contributing to a robust and efficient QA process aligned with continuous delivery principles.
-            \item Developed and maintained automated testing frameworks to support CI/CD pipelines, resulting in a significant reduction in manual testing efforts and enhanced software quality.
-            \item Actively participated in code reviews and rigorous testing, ensuring adherence to quality assurance guidelines and contributing to the transformation of QA processes towards continuous delivery.
+            \item Designed and implemented scalable and testable solutions for mobile applications, with a strong emphasis on automated testing and integration with CI/CD pipelines.
+            \item Developed and maintained automated testing frameworks specifically for mobile platforms (iOS/Android), resulting in a significant reduction in manual testing efforts and enhanced mobile application quality.
+            \item Actively participated in code reviews and rigorous testing of mobile application features, ensuring adherence to quality assurance guidelines and contributing to the transformation of QA processes towards continuous delivery.
         \end{itemize}
     }
 
